--- a/example/index.html
+++ b/example/index.html
@@ -36,9 +36,9 @@
 
 <script src="../lib/evergreen-sortable.js"></script>
 <script>
-// EvergreenSortable('.children', {
+EvergreenSortable('.children', {
 
-// });
+});
 
 EvergreenSortable('.chores', {
   connectWith: '.chores'
